Dockerfile とエントリポイントスクリプトを更新し、node ユーザーの uid/gid を調整する機能を追加

--- a/Dockerfile.node23
+++ b/Dockerfile.node23
@@ -1,4 +1,19 @@
 FROM node:23-bullseye
 
 # tsx と npm をグローバルインストール
-RUN npm install -g tsx npm@11.2.0 --no-cache
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  gosu
+
+# npm を最新版にする
+RUN npm install -g npm@11.2.0 --no-cache
+
+ARG USER=node
+ENV USER=$USER
+ENV NPM_CONFIG_CACHE=/home/$USER/.npm
+ENV NPM_CONFIG_PREFIX=/home/$USER/.npm-global
+COPY entry-point.sh /
+
+# node ユーザーでインストールしたいパッケージ
+RUN gosu $USER npm install -g tsx --no-cache
+
+ENTRYPOINT [ "/entry-point.sh" ]
